<resources>
    <string name="app_name">MusicDNA</string>
    <string name="Home">主页</string>
    <string name="Local_Music">本地音乐</string>
    <string name="Playlists">播放列表</string>
    <string name="Recently_Played">最近播放的</string>
    <string name="Favourites">最喜欢的</string>
    <string name="Folders">文件夹</string>
    <string name="Saved_DNA">已保存的DNA</string>
    <string name="Settings">设置</string>
    <string name="title_activity_home">Music DNA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Search">搜索</string>
    <string name="Sleep_Timer">睡眠计时器</string>
    <string name="action_settings">设置</string>
    <string name="Cancel">取消</string>
    <string name="Set">设置</string>
    <string name="PLAYLIST">播放列表</string>
    <string name="FAVOURITE">最喜欢的</string>
    <string name="NEW_PLAYLIST">新播放列表</string>
    <string name="ALL_PLAYLISTS">所有播放列表</string>
    <string name="ALL_FOLDERS">所有文件夹</string>
    <string name="SAVED_DNA">保存的DNA</string>
    <string name="album">专辑</string>
    <string name="artist">艺术家</string>
    <string name="RECENT">最近播放</string>
    <string name="SETTINGS">设置</string>
    <string name="DNA_Density">DNA密度</string>
    <string name="Theme_Color">主题颜色</string>
    <string name="Art_behind_the_DNA">DNA背后的艺术</string>
    <string name="Stream_over_Wifi_only">仅仅基于WiFi的流</string>
    <string name="About">关于</string>
    <string name="Reset_settings">重置设置</string>
    <!-- About Fragment strings -->
    <string name="mdg_description">An Active students group at IIT Roorkee directed towards developing useful applications</string>
    <string name="ABOUT">关于</string>
    <string name="EDIT">编辑</string>
    <string name="SAVE">保存</string>
    <string name="Title">标题</string>
    <string name="Play">播放</string>
    <string name="Play_Next">播放下一首</string>
    <string name="Add_to_Queue">添加到队列</string>
    <string name="Add_to_Playlist">添加到播放列表</string>
    <string name="Add_to_Favourites">添加到喜爱</string>
    <string name="Share">分享</string>
    <string name="Getting_Saved_Data">获取保存的数据</string>
    <string name="Songs">歌曲</string>
    <string name="Albums">专辑</string>
    <string name="Artists">艺术家</string>
    <string name="Recent">最近</string>
    <string name="QUEUE">歌曲队列</string>
    <string name="CLEAR">清空</string>
    <string name="Full_Screen">全屏</string>
    <string name="Searching_Lyrics">搜索歌词中…</string>
    <string name="No_Lyrics_Found">没有搜索到相关歌词</string>
    <string name="equalizer">均衡器</string>
    <string name="Delete">删除</string>
    <string name="Long_Press_to_Exit">长按解锁全屏</string>
    <string name="isReset_settings">是否重置设置？</string>
    <string name="message">此操作将重置所有设置，但播放列表和其他内容将保持不变。</string>

    <!--设置-->
    <string name="music_dna_short_link">http://bit.ly/musicDnaApp</string>
    <string name="share_application_text">Check out MusicDNA an awesome music player from Play Store. Link: </string>
    <string name="license_text">MusicDNA and related material are distributed under \'Attribution-NonCommercial-ShareAlike 4.0 International license\'</string>
    <string name="license_link">https://github.com/harjot-oberai/MusicDNA/blob/master/LICENSE.md</string>
    <string name="Remove">移除</string>
    <string name="New_Playlist">新的播放列表…</string>
    <string name="Save_Queue">保存队列</string>
    <string name="Enter_Playlist_Name">列表名不能为空</string>
    <string name="Playlist_exists">该列表名已经存在</string>
    <string name="Queue_saved">队列保存</string>
    <string name="Rename">重命名</string>
    <string name="VIEW_ALL">查看所有</string>
    <string name="Stream">流</string>
    <string name="RecentHorizontalList">最近的水平列表</string>

</resources>
