<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/local"
            android:title="@string/Local_Music" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/Playlists" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/Recently_Played" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_heart_filled"
            android:title="@string/Favourites" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/folder"
            android:title="@string/Folders" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_save_filled"
            android:title="@string/Saved_DNA" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />
    </group>

</menu>
